--- a/.classpath
+++ b/.classpath
@@ -4,6 +4,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Jsoup"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JfreeCharts"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/DatabaseSQL_ConnectorJ"/>
 	<classpathentry kind="lib" path="C:/Users/Steven/Downloads/jsoup-1.10.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
